--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -31,7 +31,7 @@
 
 
         
-        <span>V lady - the lady who leads</span>
+        <span>V Lady - The Lady Who Leads</span>
         
         <!--duplicate for smooth loop-->
       </div>
