--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -124,78 +124,48 @@
         </div>
       </section>
     </main>
+    <!--bags999-->
+    <section class="bags-under-999-section">
+  <h2 class="bags-under-999-title">BAGS UNDER ₹999/-</h2>
 
-    <section id="products" class="product-showcase">
-      <h2>All Bags</h2>
+  <div class="bags-under-999-container">
 
-      <div class="product-block">
-        <div class="product-images">
-          <img src="https://via.placeholder.com/600x600?text=Bag+1+Image+1" class="main-img" alt="Bag 1 main image" />
-          <div class="thumbnails">
-            <img src="https://via.placeholder.com/100x100?text=Bag+1+Image+1" onclick="changeMainImage(this)" alt="Bag 1 thumbnail 1" />
-            <img src="https://via.placeholder.com/100x100?text=Bag+1+Image+2" onclick="changeMainImage(this)" alt="Bag 1 thumbnail 2" />
-            <img src="https://via.placeholder.com/100x100?text=Bag+1+Image+3" onclick="changeMainImage(this)" alt="Bag 1 thumbnail 3" />
-          </div>
-        </div>
-        <div class="product-details">
-          <h3>Bag 1</h3>
-          <p>Premium leather bag perfect for everyday use.</p>
-          <p class="price">₹99</p>
-          <button class="add-to-cart" onclick="addToCart('Bag 1', 99, 'https://via.placeholder.com/600x600?text=Bag+1+Image+1')" aria-label="Add Bag 1 to cart">Add to Cart</button>
-        </div>
-      </div>
+    <div class="bags-under-999-card">
+      <a href="product1.html" class="bags-under-999-link">
+        <img src="bag1.jpg" alt="Trendy Tote Bag" class="bags-under-999-image">
+      </a>
+      <p class="bags-under-999-desc">Elegant Tote Bag - ₹899</p>
+      <button class="bags-under-999-btn">Add to Cart</button>
+    </div>
 
-      <div class="product-block">
-        <div class="product-images">
-          <img src="https://via.placeholder.com/600x600?text=Bag+2+Image+1" class="main-img" alt="Bag 2 main image" />
-          <div class="thumbnails">
-            <img src="https://via.placeholder.com/100x100?text=Bag+2+Image+1" onclick="changeMainImage(this)" alt="Bag 2 thumbnail 1" />
-            <img src="https://via.placeholder.com/100x100?text=Bag+2+Image+2" onclick="changeMainImage(this)" alt="Bag 2 thumbnail 2" />
-            <img src="https://via.placeholder.com/100x100?text=Bag+2+Image+3" onclick="changeMainImage(this)" alt="Bag 2 thumbnail 3" />
-          </div>
-        </div>
-        <div class="product-details">
-          <h3>Bag 2</h3>
-          <p>Elegant and spacious bag for stylish outings.</p>
-          <p class="price">₹120</p>
-          <button class="add-to-cart" onclick="addToCart('Bag 2', 120, 'https://via.placeholder.com/600x600?text=Bag+2+Image+1')" aria-label="Add Bag 2 to cart">Add to Cart</button>
-        </div>
-      </div>
+    <div class="bags-under-999-card">
+      <a href="product2.html" class="bags-under-999-link">
+        <img src="bag2.jpg" alt="Classic Sling Bag" class="bags-under-999-image">
+      </a>
+      <p class="bags-under-999-desc">Classic Sling Bag - ₹799</p>
+      <button class="bags-under-999-btn">Add to Cart</button>
+    </div>
 
-      <div class="product-block">
-        <div class="product-images">
-          <img src="https://via.placeholder.com/600x600?text=Bag+3+Image+1" class="main-img" alt="Bag 3 main image" />
-          <div class="thumbnails">
-            <img src="https://via.placeholder.com/100x100?text=Bag+3+Image+1" onclick="changeMainImage(this)" alt="Bag 3 thumbnail 1" />
-            <img src="https://via.placeholder.com/100x100?text=Bag+3+Image+2" onclick="changeMainImage(this)" alt="Bag 3 thumbnail 2" />
-            <img src="https://via.placeholder.com/100x100?text=Bag+3+Image+3" onclick="changeMainImage(this)" alt="Bag 3 thumbnail 3" />
-          </div>
-        </div>
-        <div class="product-details">
-          <h3>Bag 3</h3>
-          <p>Stylish handbag suitable for any occasion.</p>
-          <p class="price">₹110</p>
-          <button class="add-to-cart" onclick="addToCart('Bag 3', 110, 'https://via.placeholder.com/600x600?text=Bag+3+Image+1')" aria-label="Add Bag 3 to cart">Add to Cart</button>
-        </div>
-      </div>
+    <div class="bags-under-999-card">
+      <a href="product3.html" class="bags-under-999-link">
+        <img src="bag3.jpg" alt="Leather Handbag" class="bags-under-999-image">
+      </a>
+      <p class="bags-under-999-desc">Leather Handbag - ₹999</p>
+      <button class="bags-under-999-btn">Add to Cart</button>
+    </div>
 
-      <div class="product-block">
-        <div class="product-images">
-          <img src="https://via.placeholder.com/600x600?text=Bag+4+Image+1" class="main-img" alt="Bag 4 main image" />
-          <div class="thumbnails">
-            <img src="https://via.placeholder.com/100x100?text=Bag+4+Image+1" onclick="changeMainImage(this)" alt="Bag 4 thumbnail 1" />
-            <img src="https://via.placeholder.com/100x100?text=Bag+4+Image+2" onclick="changeMainImage(this)" alt="Bag 4 thumbnail 2" />
-            <img src="https://via.placeholder.com/100x100?text=Bag+4+Image+3" onclick="changeMainImage(this)" alt="Bag 4 thumbnail 3" />
-          </div>
-        </div>
-        <div class="product-details">
-          <h3>Bag 4</h3>
-          <p>Compact and trendy bag for daily use.</p>
-          <p class="price">₹95</p>
-          <button class="add-to-cart" onclick="addToCart('Bag 4', 95, 'https://via.placeholder.com/600x600?text=Bag+4+Image+1')" aria-label="Add Bag 4 to cart">Add to Cart</button>
-        </div>
-      </div>
-    </section>
+    <div class="bags-under-999-card">
+      <a href="product4.html" class="bags-under-999-link">
+        <img src="bag4.jpg" alt="Compact Shoulder Bag" class="bags-under-999-image">
+      </a>
+      <p class="bags-under-999-desc">Compact Shoulder Bag - ₹699</p>
+      <button class="bags-under-999-btn">Add to Cart</button>
+    </div>
+
+  </div>
+</section>
+
+      
 
     <section id="contact" class="contact-us">
       <h2>CONTACT US</h2>
