category navbar updated
product category navbar (above the featured product section) has been updated with categories- All Handbags, Candy Bags, Pie Bags, Clutches, Accessories

--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -51,23 +51,23 @@
       <section class="category-bar">
         <div class="category-item">
           <img src="https://img.icons8.com/ios-filled/100/000000/handbag.png" alt="Handbag category icon" />
-          <p>Handbags</p>
+          <p>All Handbags</p>
         </div>
         <div class="category-item">
           <img src="https://img.icons8.com/ios-filled/100/000000/clutch-bag.png" alt="Clutch category icon" />
-          <p>Clutches</p>
-        </div>
-        <div class="category-item">
-          <img src="https://img.icons8.com/ios-filled/100/000000/sling-bag.png" alt="Candy Bags category icon" />
           <p>Candy Bags</p>
         </div>
         <div class="category-item">
-          <img src="https://img.icons8.com/ios-filled/100/000000/tote-bag.png" alt="Pie Bags category icon" />
+          <img src="https://img.icons8.com/ios-filled/100/000000/sling-bag.png" alt="Candy Bags category icon" />
           <p>Pie Bags</p>
         </div>
         <div class="category-item">
+          <img src="https://img.icons8.com/ios-filled/100/000000/tote-bag.png" alt="Pie Bags category icon" />
+          <p>Clutches</p>
+        </div>
+        <div class="category-item">
           <img src="https://img.icons8.com/ios-filled/100/000000/backpack.png" alt="All Bags category icon" />
-          <p>All Bags</p>
+          <p>Accessories</p>
         </div>
       </section>
 
