Update Navbar icons mainpage.html
navbar links replaced with icons

--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="products.css" />
     <link rel="stylesheet" href="accessories.css" />
     <link rel="stylesheet" href="contact.css" />
+<!--navbar_icons-->
+  <link rel="stylesheet" href="style.css" />
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+/>
   </head>
   <body>
     <header>
@@ -16,13 +22,13 @@
         <div class="tagline">Versatile Lady</div>
       </div>
       <nav>
-        <ul class="nav-links">
-          <li><a href="#home" aria-label="Go to Home section">Home</a></li>
-          <li><a href="#about" aria-label="Go to About section">About</a></li>
-          <li><a href="#cart" aria-label="Go to Cart">Cart</a></li>
-          <li><a href="#contact" aria-label="Go to Contact Us section">Contact Us</a></li>
-        </ul>
-      </nav>
+    <ul class="nav-links">
+  <li><a href="#"><i class="fa fa-house-chimney"></i></a></li>     <!-- Home -->
+  <li><a href="#"><i class="fa fa-circle-info"></i></a></li>
+  <li><a href="#"><i class="fa fa-bag-shopping"></i></a></li>      <!-- Cart -->
+  <li><a href="#"><i class="fa fa-envelope"></i></a></li>          <!-- Contact -->
+</ul>
+  </nav>
     </header>
 
     <!-- thin moving banner — place immediately after </header> -->
