--- a/Frontend/Accessories.html
+++ b/Frontend/Accessories.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>V LADY | Bags Collection</title>
-  <link rel="stylesheet" href="productshowcase.css" />
+  <link rel="stylesheet" href="Accessories.css" />
 </head>
 <body>
 
