--- a/Frontend/bagcatogories.html
+++ b/Frontend/bagcatogories.html
@@ -24,22 +24,23 @@
   <h2>All Bags</h2>
 
   <!-- Product Blocks -->
-  <div class="product-block">
-    <div class="product-images">
-      <img src="https://via.placeholder.com/600x600?text=Bag+1+Image+1" class="main-img" alt="Bag 1">
-      <div class="thumbnails">
-        <img src="https://via.placeholder.com/100x100?text=Bag+1+Image+1" onclick="changeMainImage(this)">
-        <img src="https://via.placeholder.com/100x100?text=Bag+1+Image+2" onclick="changeMainImage(this)">
-        <img src="https://via.placeholder.com/100x100?text=Bag+1+Image+3" onclick="changeMainImage(this)">
-      </div>
-    </div>
-    <div class="product-details">
-      <h3>Bag 1</h3>
-      <p>Premium leather bag perfect for everyday use.</p>
-      <p class="price">99</p>
-      <button class="add-to-cart" onclick="addToCart('Bag 1', 99, 'https://via.placeholder.com/600x600?text=Bag+1+Image+1')">Add to Cart</button>
+  <!-- Example in bagcatogories.html -->
+<div class="product-block">
+  <div class="product-images">
+    <img src="https://via.placeholder.com/600x600?text=Bag+1+Image+1" class="main-img" alt="Bag 1">
+    <div class="thumbnails">
+      <img src="https://via.placeholder.com/100x100?text=Bag+1+Image+1" onclick="changeMainImage(this)">
+      <img src="https://via.placeholder.com/100x100?text=Bag+1+Image+2" onclick="changeMainImage(this)">
+      <img src="https://via.placeholder.com/100x100?text=Bag+1+Image+3" onclick="changeMainImage(this)">
     </div>
   </div>
+  <div class="product-details">
+    <h3>Bag 1</h3>
+    <p>Premium leather bag perfect for everyday use.</p>
+    <p class="price">₹99</p>
+    <button class="add-to-cart" onclick="addToCart('PRODUCT_ID_HERE')">Add to Cart</button>
+  </div>
+</div>
 
   <div class="product-block">
     <div class="product-images">
