--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>V Lady</title>
-  <link rel="stylesheet" href="temp_mainpage.css" />
+  <link rel="stylesheet" href="style.css" />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -26,7 +26,7 @@
     </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="temp_mainpage.html"><i class="fa fa-house-chimney"></i></a></li>
+        <li><a href="mainpage.html"><i class="fa fa-house-chimney"></i></a></li>
         <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
         <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
         <li><a href="#"><i class="fa fa-envelope"></i></a></li>
