--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" 
   <title>V Lady</title>
   <link rel="stylesheet" href="style.css" />
   <link
@@ -29,7 +29,7 @@
         <li><a href="mainpage.html"><i class="fa fa-house-chimney"></i></a></li>
         <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
         <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+        <li><a href="mainpage.html"><i class="fa fa-envelope"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -106,7 +106,7 @@
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product1"/>
+            <img src="IMG_6724.png" alt="Product1"/>
           </a>
         </div>
         <div class="bottom">
@@ -174,7 +174,7 @@
     <img src="https://images.pexels.com/photos/18458794/pexels-photo-18458794.jpeg" alt="Fashion Look 1">
   </div>
   <div class="gallery-item">
-    <img src="https://images.pexels.com/photos/22432982/pexels-photo-22432982.jpeg" alt="Fashion Look 2">
+    <img src="https://images.pexels.com/photos/22432982/pexels-photo-22432982.jpeg" alt="Fashion Look 5">
   </div>
   <div class="gallery-item">
     <img src="https://images.pexels.com/photos/7953286/pexels-photo-7953286.jpeg" alt="Fashion Look 3">
@@ -193,14 +193,14 @@
   <div class="product-container">
 
     <!-- Product Card -->
-    <div class="wrapper" data-product-id="product001">
+    <div class="wrapper" data-product-id="product004">
       <div class="wishlist-btn">
         <i class="material-icons">favorite_border</i>
       </div>
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product 1" />
+            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product 4" />
           </a>
         </div>
         <div class="bottom">
@@ -216,14 +216,14 @@
     </div>
 
     <!-- Duplicate Product Cards -->
-    <div class="wrapper" data-product-id="product002">
+    <div class="wrapper" data-product-id="product005">
       <div class="wishlist-btn">
         <i class="material-icons">favorite_border</i>
       </div>
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product 2" />
+            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product 5" />
           </a>
         </div>
         <div class="bottom">
@@ -238,14 +238,14 @@
       </div>
     </div>
 
-    <div class="wrapper" data-product-id="product003">
+    <div class="wrapper" data-product-id="product006">
       <div class="wishlist-btn">
         <i class="material-icons">favorite_border</i>
       </div>
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product 3" />
+            <img src="https://images.pexels.com/photos/20086704/pexels-photo-20086704.jpeg" alt="Product 6" />
           </a>
         </div>
         <div class="bottom">
@@ -262,17 +262,16 @@
 
   </div>
 </section>
-  <section class="contact-us">
-    <h2>CONTACT US</h2>
-    <p>We would love to hear from you. Please fill out the form below.</p>
-
-    <form action="https://docs.google.com/forms/d/e/YOUR_FORM_ID/formResponse" method="POST" target="_blank">
-      <input type="text" name="entry.1111111111" placeholder="Your Name" required>
-      <input type="tel" name="entry.2222222222" placeholder="Mobile Number" required>
-      <input type="email" name="entry.3333333333" placeholder="Gmail ID" required>
-      <textarea name="entry.4444444444" placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit">Submit</button>
-    </form>
-  </section>
+  <!-- 📨 CONTACT US SECTION -->
+<section class="contact-section">
+  <h2>GET IN TOUCH</h2>
+  <p class="contact-message">
+    For order-related queries or support, please WhatsApp us.
+  </p>
+  <a href="https://wa.me/91XXXXXXXXXX" target="_blank" class="whatsapp-tab">
+    <i class="fa-brands fa-whatsapp"></i>
+  </a>
+</section>
+  <script src="script.js"></script>
 </body>
 </html>
