--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -29,7 +29,7 @@
         <li><a href="mainpage.html"><i class="fa fa-house-chimney"></i></a></li>
         <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
         <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-        <li><a href="mainpage.html"><i class="fa fa-envelope"></i></a></li>
+        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
       </ul>
     </nav>
   </header>
