--- a/Frontend/Candy_Bags.html
+++ b/Frontend/Candy_Bags.html
@@ -3,41 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>V LADY | Bags Collection</title>
-  <link rel="stylesheet" href="product_category.css" />
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-/>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <title>V LADY | Candy Bags</title>
+  <link rel="stylesheet" href="accessories.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 <body>
 
-  <header>
+<header>
   <div class="logo">
     V LADY
     <div class="tagline">Versatile Lady</div>
   </div>
- <nav>
+  <nav>
     <ul class="nav-links">
-  <li><a href="mainpage.html"><i class="fa fa-house-chimney"></i></a></li>     <!-- Home -->
-  <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
-  <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>      <!-- Cart -->
-  <li><a href="mainpage.html"><i class="fa fa-envelope"></i></a></li>          <!-- Contact -->
-</ul>
+      <li><a href="mainpage.html"><i class="fa fa-house-chimney"></i></a></li>
+      <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
+      <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+      <li><a href="mainpage.html"><i class="fa fa-envelope"></i></a></li>
+    </ul>
   </nav>
 </header>
-<!-- Pink Banner -->
+
 <div class="pink-banner">
-  <div class="scrolling-text">
-    THE LADY WHO LEADS
-  </div>
+  <div class="scrolling-text">THE LADY WHO LEADS</div>
 </div>
 
-  <!-- ====== MAIN SECTION: PRODUCTS ====== -->
-  <main class="bag-section">
-    <h2>CANDY BAGS</h2>
-          <!-- === VIEW TOGGLE BUTTONS WITH ICONS === -->
+
+<main class="bag-section">
+  <h2>CANDY BAGS</h2>
+<!-- === VIEW TOGGLE BUTTONS WITH ICONS === -->
 <div class="view-toggle">
   <button class="view-btn" data-columns="1" title="1 per row">
     <!-- 1-column icon -->
@@ -71,171 +66,135 @@
     ❤️
   </button>
 </div>
-    <div class="product-container">
-  <!-- Product Card 1 -->
-  <div class="wrapper" data-product-id="chair001">
-    <div class="wishlist-btn">
-      <i class="material-icons">favorite_border</i>
-    </div>
-    <div class="container">
-      <div class="top">
-        <a href="productdetails.html">
-          <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
-        </a>
-      </div>
-      <div class="bottom">
-        <div class="left">
-          <div class="details">
-            <h1>Bags</h1>
-            <p>₹950</p>
-          </div>
-          <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-          <div class="buy-now">BUY<br>NOW</div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- Product Card 2 -->
-  <div class="wrapper" data-product-id="chair002">
-    <div class="wishlist-btn">
-      <i class="material-icons">favorite_border</i>
-    </div>
-    <div class="container">
-      <div class="top">
-        <a href="productdetails.html">
-          <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
-        </a>
+  <div class="product-container">
+    <!-- Product Card 1 -->
+    <div class="wrapper" data-product-id="candy001">
+      <div class="wishlist-btn">
+        <i class="material-icons">favorite_border</i>
       </div>
-      <div class="bottom">
-        <div class="left">
-          <div class="details">
-            <h1>Bags</h1>
-            <p>₹950</p>
+      <div class="container">
+        <div class="top">
+          <a href="productdetails.html">
+            <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Candy Bag 1" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="left">
+            <div class="details">
+              <h1>Candy Bag 1</h1>
+              <p>₹950</p>
+            </div>
+            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
+            <div class="buy-now">BUY<br>NOW</div>
           </div>
-          <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-          <div class="buy-now">BUY<br>NOW</div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Product Card 3 -->
-  <div class="wrapper" data-product-id="chair003">
-    <div class="wishlist-btn">
-      <i class="material-icons">favorite_border</i>
-    </div>
-    <div class="container">
-      <div class="top">
-        <a href="productdetails.html">
-          <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
-        </a>
+    <!-- Product Card 2 -->
+    <div class="wrapper" data-product-id="candy002">
+      <div class="wishlist-btn">
+        <i class="material-icons">favorite_border</i>
       </div>
-      <div class="bottom">
-        <div class="left">
-          <div class="details">
-            <h1>Bags</h1>
-            <p>₹950</p>
+      <div class="container">
+        <div class="top">
+          <a href="productdetails.html">
+            <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Candy Bag 2" />
+          </a>
+        </div>
+        <div class="bottom">
+          <div class="left">
+            <div class="details">
+              <h1>Candy Bag 2</h1>
+              <p>₹1050</p>
+            </div>
+            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
+            <div class="buy-now">BUY<br>NOW</div>
           </div>
-          <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-          <div class="buy-now">BUY<br>NOW</div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Product Card 4 -->
-  <div class="wrapper" data-product-id="chair004">
-    <div class="wishlist-btn">
-      <i class="material-icons">favorite_border</i>
-    </div>
-    <div class="container">
-      <div class="top">
-        <a href="productdetails.html">
-          <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
-        </a>
-      </div>
-      <div class="bottom">
-        <div class="left">
-          <div class="details">
-            <h1>Bags</h1>
-            <p>₹950</p>
-          </div>
-          <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-          <div class="buy-now">BUY<br>NOW</div>
-        </div>
-      </div>
-    </div>
+    <!-- Add more products similarly -->
   </div>
-
-  <!-- Product Card 5 -->
-  <div class="wrapper" data-product-id="chair005">
-    <div class="wishlist-btn">
-      <i class="material-icons">favorite_border</i>
-    </div>
-    <div class="container">
-      <div class="top">
-        <a href="productdetails.html">
-          <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
-        </a>
-      </div>
-      <div class="bottom">
-        <div class="left">
-          <div class="details">
-            <h1>Bags</h1>
-            <p>₹950</p>
-          </div>
-          <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-          <div class="buy-now">BUY<br>NOW</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+</main>
 
 <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const wishlistBtn = document.querySelector(".wishlist-btn i");
-    const productCard = document.querySelector(".wrapper");
-    const productId = productCard.dataset.productId;
+document.addEventListener("DOMContentLoaded", () => {
+  const productWrappers = document.querySelectorAll(".wrapper");
 
-    // Load wishlist from localStorage
-    const wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
+  productWrappers.forEach(wrapper => {
+    const productId = wrapper.dataset.productId;
+    const productName = wrapper.querySelector(".details h1").textContent;
+    const productPrice = wrapper.querySelector(".details p").textContent;
+    const productImage = wrapper.querySelector(".top img").src;
 
-    // Set active state if product already in wishlist
-    if (wishlist.includes(productId)) {
+    const product = {
+      id: productId,
+      name: productName,
+      price: productPrice,
+      image: productImage,
+      quantity: 1
+    };
+
+    // ====== Wishlist ======
+    const wishlistBtn = wrapper.querySelector(".wishlist-btn i");
+    let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
+
+    if (wishlist.find(p => p.id === productId)) {
       wishlistBtn.textContent = "favorite";
-      wishlistBtn.classList.add("active");
       wishlistBtn.style.color = "#ff4d6d";
     }
 
     wishlistBtn.addEventListener("click", () => {
       let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
+      const exists = wishlist.find(p => p.id === productId);
 
-      if (wishlist.includes(productId)) {
-        // Remove from wishlist
-        wishlist = wishlist.filter(id => id !== productId);
+      if (exists) {
+        wishlist = wishlist.filter(p => p.id !== productId);
         wishlistBtn.textContent = "favorite_border";
-        wishlistBtn.classList.remove("active");
         wishlistBtn.style.color = "white";
       } else {
-        // Add to wishlist
-        wishlist.push(productId);
+        wishlist.push(product);
         wishlistBtn.textContent = "favorite";
-        wishlistBtn.classList.add("active");
         wishlistBtn.style.color = "#ff4d6d";
       }
-
       localStorage.setItem("wishlist", JSON.stringify(wishlist));
-      alert("Wishlist updated! Check your Wishlist page."); // optional alert
+      alert(`${productName} updated in Wishlist!`);
+    });
+
+    // ====== Add to Cart ======
+    const addToCartBtn = wrapper.querySelector(".buy i");
+    addToCartBtn.addEventListener("click", () => {
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const existing = cart.find(p => p.id === productId);
+
+      if (existing) {
+        existing.quantity += 1;
+      } else {
+        cart.push({ ...product });
+      }
+      localStorage.setItem("cart", JSON.stringify(cart));
+      alert(`${productName} added to Cart 🛒`);
+    });
+
+    // ====== Buy Now ======
+    const buyNowBtn = wrapper.querySelector(".buy-now");
+    buyNowBtn.addEventListener("click", () => {
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const existing = cart.find(p => p.id === productId);
+      if (!existing) cart.push({ ...product });
+      localStorage.setItem("cart", JSON.stringify(cart));
+      window.location.href = "cart.html";
     });
   });
+});
 </script>
 
-<!-- Footer Section -->
 <footer class="site-footer">
-  <p>© 2025 V Lady. All rights reserved. </p>
+  <p>© 2025 V Lady. All rights reserved.</p>
 </footer>
 
-
+</body>
 </html>
